Refactor: Use SequencedCollection#getFirst